Fix header on small screen

--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -29,6 +29,8 @@
 }
 
 .header > h1 {
+    max-width: 60%;
+    text-align: center;
     font-size: clamp(2rem, 8vw - 1.5rem, 3.5rem);
 }
 
